# NxNote

./: .gitignore  Cargo.toml  build.rs
scripts/: measure-focused-cpu.ps1
src/: app.rs  autostart.rs  chrome.rs  color_ui.rs  config.rs  fonts.rs  hotkey.rs  icons.rs  main.rs  md_highlight.rs  settings_ui.rs  storage.rs  theme.rs  tray.rs  watcher.rs
